# opennel_svn

./: .cvsignore  Makefile.am  configure.ac
libs/entmodel/src/: Makefile.am  gameeventserver.cpp
nel/: CMakeLists.txt  Makefile  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  nel-config.in  nel.dsw  nel.sln  nel_8.sln  nel_vc90.sln  nel_vs90.sln  nelcegui_vc9.sln
nel/CMakeModules/: opennel.cmake
nel/automacros/: am_stlport.m4  opennel.cmake
nel/doc/: Doxyfile.cmake.in  make_nel_dox.bat  nel.dox
nel/include/: Makefile.am
nel/include/nel/: CMakeLists.txt  Makefile.am
nel/kdevelop/: Doxyfile  nel.kdevelop
nel/samples/: CMakeLists.txt  Makefile.am  all_8.sln  all_vc90.sln  all_vs90.sln
nel/samples/3d/: CMakeLists.txt  Makefile.am
nel/samples/georges/: CMakeLists.txt  Makefile.am  georges_sample_8.vcproj  georges_sample_vs90.vcproj  main.cpp
nel/samples/misc/: CMakeLists.txt
nel/samples/net/: CMakeLists.txt  Makefile.am
nel/samples/pacs/: CMakeLists.txt  Makefile.am  Pacs sample.dsp  Pacs sample.dsw  Pacs sample.sln  Pacs sample.vcproj  Pacs sample_vs90.vcproj  main.cpp  object.cpp  object.h  pacs_sample_vs90.vcproj
nel/samples/sound_sources/: Makefile.am  main.cpp  sound_sources.dsp  sound_sources.dsw  sound_sources.sln  sound_sources.vcproj  sound_sources_8.vcproj  sound_sources_vs90.vcproj
nel/src/: 3d.dsp  3d.vcproj  3d_8.vcproj  3d_vs90.vcproj  CMakeLists.txt  Makefile  Makefile.am  ainimat.dsp  cegui_8.vcproj  cegui_vs9.vcproj  georges.dsp  georges.vcproj  georges_8.vcproj  georges_vs90.vcproj  ligo.dsp  ligo.vcproj  ligo_8.vcproj  ligo_vs90.vcproj  logic.dsp  logic.vcproj  logic_8.vcproj  logic_vs90.vcproj  memory.dsp  memory.vcproj  memory_8.vcproj  misc.dsp  misc.vcproj  misc_8.vcproj  misc_vs90.vcproj  nel.dsp  nel.vcproj  nel_vs90.vsprops  nel_vs90_r_dev.vsprops  nel_vs90_r_dll.vsprops  nel_vs90_r_exe_console.vsprops  nel_vs90_r_exe_windows.vsprops  nel_vs90_x.vsprops  net.dsp  net.vcproj  net_8.vcproj  (+9 more)
nel/src/3d/: CMakeLists.txt  Makefile.am  anim_ctrl.cpp  anim_detail_trav.cpp  anim_detail_trav.h  animatable.cpp  animatable.h  animated_lightmap.cpp  animated_lightmap.h  animated_material.cpp  animated_material.h  animated_morph.cpp  animated_morph.h  animated_value.cpp  animated_value.h  animation.cpp  animation.h  animation_optimizer.cpp  animation_optimizer.h  animation_playlist.cpp  animation_playlist.h  animation_set.cpp  animation_set.h  animation_set_user.cpp  animation_set_user.h  animation_time.cpp  async_file_manager_3d.cpp  async_texture_block.cpp  async_texture_block.h  async_texture_manager.cpp  async_texture_manager.h  bezier_patch.cpp  (+534 more)
nel/tools/: CMakeLists.txt  Makefile.am  all.sln  all_8.sln  all_vc90.sln  all_vs90.sln
nelcollada/: CMakeLists.txt  main.cpp
nelns/: CMakeLists.txt  Makefile.am  NEWS  README  configure.ac  services.dsw  services.sln  services_8.sln  services_vc90.sln  services_vs90.sln
nelns/admin/: config.php
nelns/admin_executor_service/: CMakeLists.txt  Makefile.am  admin_executor_service.cpp  admin_executor_service.dsp  admin_executor_service.vcproj  admin_executor_service_8.vcproj  admin_executor_service_vs90.vcproj  log_report.cpp  log_report.h
nelns/admin_service/: CMakeLists.txt  Makefile.am  admin_service.cpp  admin_service.dsp  admin_service.h  admin_service.vcproj  admin_service_8.vcproj  admin_service_vs90.vcproj  connection_web.cpp  connection_web.h
nelns/automacros/: am_stlport.m4
nelns/kdevelop/: NeLNS.kdevelop  NeLNS.kdevelop.pcs  NeLNS.kdevses
nelns/login_service/: CMakeLists.txt  Makefile.am  connection_client.cpp  connection_client.h  connection_web.cpp  connection_ws.cpp  connection_ws.h  login_service.cpp  login_service.dsp  login_service.h  login_service.vcproj  login_service_8.vcproj  login_service_vs90.vcproj  mysql_helper.cpp  mysql_helper.h
nelns/naming_service/: CMakeLists.txt  Makefile.am  naming_service.cfg  naming_service.cpp  naming_service.dsp  naming_service.vcproj  naming_service_8.vcproj  naming_service_vs90.vcproj
nelns/welcome_service/: CMakeLists.txt  Makefile.am  user_role.cpp  user_role.h  welcome_service.cfg  welcome_service.cpp  welcome_service.dsp  welcome_service.h  welcome_service.vcproj  welcome_service_8.vcproj  welcome_service_itf.cpp  welcome_service_itf.h  welcome_service_itf.py  welcome_service_vs90.vcproj
projectshell/src/: CMakeLists.txt  main.cpp
snowballs2/: AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  NEWS  README  SERVICES  acconfig.h  autogen.sh  configure.ac  configure.in  snowballs2.dsw  snowballs2.sln  snowballs2_8.sln  snowballs2_vc90.sln  snowballs2_vs90.sln
snowballs2/CMakeModules/: FindNeL3D.cmake  FindNeLMISC.cmake  FindNeLNET.cmake  FindNeLPACS.cmake  FindNeLSNDDRV.cmake  FindNeLSOUND.cmake
snowballs2/client/: CMakeLists.txt  Makefile.am  client.cfg  client.cfg.in  client.dsp  client.vcproj  client_8.vcproj  snowballs_client.cfg  snowballs_client.cfg.in  snowballs_client_default.cfg  snowballs_client_vs90.vcproj  snowballs_keys.cfg  snowballs_keys_default.cfg
snowballs2/config/: 01_admin_executor_service.lnk  02_login_service.lnk  03_naming_service.lnk  04_welcome_service.lnk  05_chat.lnk  06_frontend.lnk  07_position.lnk  08_snowballs.lnk  chat_service.cfg  client.cfg  login_service.cfg  login_service_database.cfg  welcome_service.cfg
snowballs2/kdevelop/: Snowballs.kdevelop  Snowballs.kdevelop.pcs
snowballs2/scripts/: copy_nel_d.bat  copy_nel_df.bat  copy_nel_r.bat  copy_nel_rd.bat  create_client_class.bat  create_client_class.py  create_client_component.bat  create_client_component.py  grab_df_max_plugins.bat  grab_rd_max_plugins.bat  init_rd_00_naming_service.bat  init_rd_01_login_service.bat  init_rd_11_position_service.bat  init_rd_11_welcome_service.bat  init_rd_12_chat_service.bat  init_rd_14_collision_service.bat  init_rd_20_frontend_service.bat  init_rd_90_snowballs_client.bat  init_rd_99_scenery_service.bat  install_df_max_plugins_2008.bat  install_df_patch_edit_2008.bat  install_rd_max_plugins_2008.bat  uninstall_max_plugins_2008.bat
snowballs2/server/: CMakeLists.txt  services.dsw
(+3012 files in other folders)
